--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                     <li>
                         <a href="https://github.com/p145085">Github</a>
                     </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCdeeRhWxmP19QDKKJluO8yw">Youtube</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -20,11 +23,6 @@
                 <h3>Welcome</h3>
                 <p>Greetings, this is a basic webpage built with HTML.</p>
             </section>
-            <form>
-                <input type="email">
-                <input type="password">
-                <input type="submit">
-            </form>
         </div>
         <div id="left">
             <aside>
